--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
-    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet"/>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css" />
     <link rel="stylesheet" href="stylesheet.css" type="text/css" />
     <script type="text/javascript" src="script.js"></script>
     <title>Andy Kamath</title>
@@ -28,28 +28,51 @@
         <div class="container">
             <h1>Andy Kamath</h1>
             <h2>Hacker. Scientist. Genius. Freshman.</h2>
-            <a href="AboutMe">Learn More</a>
+            <h2>If you don't think I'm awesome, read my qualities below</h2>
+            <a href="http://google.com">Learn More</a>
         </div>
     </div>
     <div class="computer-stuff">
     <div class="container">
         <h1>
-            Scientist
+            Freshman
         </h1>
-        <p>I take advanced Math classes two full grade levels above mine, have achieved many medals in Science Olympiad, and starting a FIRST team</p>
+        <p>15 years old and 15x your swag</p>
     </div>
     <div class="container">
         <h1>
-            Inspiration
+            Utopian
         </h1>
-        <p>Everyone is simply inspired by my amazing swag that's too much to handle</p>
+        <p>I am really OCD...</p>
+    </div>
+    <div class = "container">
+    <h1>
+    Conservative
+    </h1>
+    <p>Conservative ideals with a liberal mind... Does that make any sense?</p>
+    </div>
+
+    <div class = "container">
+    <h1>Kamath</h1>
+    <p>My last name. Respect it</p>
     </div>
     </div>
     <div class="ecs">
         <div class="container">
             <h1>
-
+                Young
             </h1>
+            <p>
+            15 years old, and still swagger than you. You know it.
+            </p>
+            <h1>
+            Optimistic
+            </h1>
+            <p>
+            I am pretty awesome
+            </p>
+            <h1>Utilitarian</h1>
+            <p>Always focused on the Greater good!</p>
         </div>
     </div>
 </body>
