--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="pull-right">
                 <li><a href="http://twitter.com/hackgician">Twitter</a></li>
                 <li><a href="http://github.com/andykamath">GitHub</a></li>
-                <li><a href="http://facebook.com/andy.kamath.12">Facebook</a></li>
+                <li><a href="http://facebook.com/hackgician">Facebook</a></li>
             </ul>
         </div>
     </div>
