--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="pull-right">
                 <li><a href="http://twitter.com/hackgician">Twitter</a></li>
                 <li><a href="http://github.com/andykamath">GitHub</a></li>
-                <li><a href="http://facebook.com/hackgician">Facebook</a></li>
+                <li><a href="http://facebook.com/andy.kamath.12">Facebook</a></li>
             </ul>
         </div>
     </div>
@@ -31,10 +31,10 @@
 
     <div class="hacker animated wow fadeInUp">
         <div class="container">
-            <h1 class="animated infinite pulse">import hacker.swag.*</h1>
+            <h1 class="animated infinite pulse">using System.hacker;</h1>
             <p>Fluent in C#, VB.NET, HTML, CSS, Javascript, and most scripting languages</p>
-            <p>Learning Django and Java</p>
-            <p>Would get a MCSD certification if it weren't SO EXPENSIVE...</p>
+            <p>Learning Django framework for Python and Java</p>
+            <p>Working to attain MCSD certification</p>
         </div>
 
 
@@ -47,7 +47,7 @@
     <div class="scientist animated wow fadeInUp">
         <div class="container">
             <h1 class="animated wow bounceInUp">And-E=MC^2</h1>
-            <p>Physics is my thayung</p>
+            <p>I like physics</p>
             <p>Three-time in a row top-3 medalist in Science Olympiad</p>
             <p>I do topics such as Boomilever and Circuit Lab because I am INCLINED towards physics <a href="http://twitter.com/#punny">#punny</a></p>
         </div>
@@ -55,7 +55,7 @@
 
     <div class="genius animated wow fadeInRight">
         <div class="container">
-            <h1 class="animated wow fadeInUp">Genius. MAGISTER. διανοούμενος. अभिशोभित:</h1>
+            <h1 class="animated wow fadeInUp">MAGISTER. διανοούμενος. अभिशोभित:</h1>
             <p>Fluent in Latin, Sanskrit, Hindi, Konkani, and English. With a 4.0+ GPA.</p>
             <p>Did I mention I made this website from scratch? <a href="http://twitter.com/#html">#html</a></p>
         </div>
@@ -64,8 +64,7 @@
     <div class="freshman animated wow fadeInDown">
         <div class="container">
             <h1 class="animated wow rollIn">15 years old</h1>
-            <p>15 years old, and yet swagger than you.</p>
-            <p>Rising sophomore in North Carolina</p>
+            <p>I am 15 years old, and a rising sophomore in high school</p>
             <p>I like to consider myself smart for my age</p>
         </div>
     </div>
