--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <h1>Andy Kamath</h1>
             <p>Hacker. Scientist. Genius. Freshman</p>
-            <a href="http://twitter.com/hackgician">Learn More</a>
+            <a href="EmailMe.exe">Email Me</a> 
         </div>
     </div>
 
@@ -69,7 +69,7 @@
         </div>
     </div>
     <div class="bottom">
-
+        
     </div>
 </body>
 </html>
