--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <h1>Andy Kamath</h1>
             <p>Hacker. Scientist. Genius. Freshman</p>
-            <a href="EmailMe.exe">Email Me</a> 
+            <a href="mailto: andy@andykamath.com">Email Me</a> 
         </div>
     </div>
 
