--- a/index.html
+++ b/index.html
@@ -24,18 +24,17 @@
     <div class="jumbotron animated pulse">
         <div class="container">
             <h1>Andy Kamath</h1>
-            <p>Hacker. Scientist. Genius. Freshman</p>
-            <a href="mailto: andy@andykamath.com">Email Me</a> 
+            <p>Hacker. Scientist. Pentalingual. Freshman</p>
         </div>
     </div>
 
     <div class="hacker animated wow fadeInUp">
         <div class="container">
             <h1 class="animated infinite pulse">using System.hacker;</h1>
-            <p>Fluent in C#, VB.NET, HTML, CSS, Javascript, and most scripting languages</p>
-            <p>Learning Django framework for Python and Java</p>
+            <p>Fluent in C#, VB.NET, Web dev, Ruby, Python, PHP, and Groovy</p>
+            <p>Learning Java and the Django framework for Python</p>
             <p>Working to attain MCSD certification</p>
-            <p>Check out my first application, <a href="http://github.com/andykamath/googler">Googler</a>, that I uploaded on GitHub!</p>
+            <p>Working on Minerva using C#</p>
         </div>
 
 
@@ -44,13 +43,12 @@
             new WOW().init();
         </script>
     </div>
-
-    <div class="scientist animated wow fadeInUp">
+        <div class="scientist animated wow fadeInUp">
         <div class="container">
             <h1 class="animated wow bounceInUp">And-E=MC^2</h1>
             <p>I like physics</p>
             <p>Three-time in a row top-3 medalist in Science Olympiad</p>
-            <p>I do topics such as Boomilever and Circuit Lab because I am INCLINED towards physics <a href="http://twitter.com/#punny">#punny</a></p>
+            <p>I do topics such as Boomilever and Circuit Lab because I am INCLINED towards physics <a href="http://rxrwng.appspot.com/twitter.com/#punny">#punny</a></p>
         </div>
     </div>
 
@@ -58,7 +56,7 @@
         <div class="container">
             <h1 class="animated wow fadeInUp">MAGISTER. διανοούμενος. अभिशोभित:</h1>
             <p>Fluent in Latin, Sanskrit, Hindi, Konkani, and English. With a 4.0+ GPA.</p>
-            <p>Did I mention I made this website from scratch? <a href="http://twitter.com/#html">#html</a></p>
+            <p>I made this website from scratch using <a href="http://rxrwng.appspot.com/twitter.com/#html">#html</a>, <a href="http://rxrwng.appspot.com/twitter.com/#css">#css</a>, <a href="http://rxrwng.appspot.com/twitter.com/#js">#js</a></p>
         </div>
     </div>
 
@@ -69,8 +67,32 @@
             <p>I like to consider myself smart for my age</p>
         </div>
     </div>
-    <div class="bottom">
-        
+
+    <div class="email">
+        <h1>"<a href="http://twitter.com/#yoloswag">#yoloswag</a>"</h1>
+        <div class="container">
+        <form method="POST" action="http://forms.brace.io/andy@andykamath.com">
+
+            <div class="form-group">
+                <label for="exampleInputName">Name</label>
+                <input name="name" class="form-control" id="exampleInputName" placeholder="Enter name">
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input name="_replyto" type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+            </div>
+
+            <div class="form-group">
+                <label for="exampleTextArea">Your comment</label>
+                <textarea name="message" class="form-control" rows="3"></textarea>
+            </div>
+
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+
+        </form>
+            </div>
     </div>
 </body>
 </html>
