--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="hacker animated wow fadeInUp">
         <div class="container">
-            <h1 class="animated infinite pulse">using System.hacker;</h1>
+            <h1 class="animated wow bounceIn">using System.hacker;</h1>
             <p>Fluent in C#, VB.NET, Web dev, Ruby, Python, PHP, and Groovy</p>
             <p>Learning Java and the Django framework for Python</p>
             <p>Working to attain MCSD certification</p>
@@ -48,15 +48,15 @@
             <h1 class="animated wow bounceInUp">And-E=MC^2</h1>
             <p>I like physics</p>
             <p>Three-time in a row top-3 medalist in Science Olympiad</p>
-            <p>I do topics such as Boomilever and Circuit Lab because I am INCLINED towards physics <a href="http://rxrwng.appspot.com/twitter.com/#punny">#punny</a></p>
+            <p>I do topics such as Boomilever and Circuit Lab because I am INCLINED towards physics <a href="http://rxrwng.appspot.com/twitter.com/hashtag/punny">#punny</a></p>
         </div>
     </div>
 
     <div class="genius animated wow fadeInRight">
         <div class="container">
             <h1 class="animated wow fadeInUp">MAGISTER. διανοούμενος. अभिशोभित:</h1>
-            <p>Fluent in Latin, Sanskrit, Hindi, Konkani, and English. With a 4.0+ GPA.</p>
-            <p>I made this website from scratch using <a href="http://rxrwng.appspot.com/twitter.com/#html">#html</a>, <a href="http://rxrwng.appspot.com/twitter.com/#css">#css</a>, <a href="http://rxrwng.appspot.com/twitter.com/#js">#js</a></p>
+            <p>Fluent in Latin, Sanskrit, Hindi, Konkani, and English.</p>
+            <p>I made this website from scratch using <a href="http://rxrwng.appspot.com/twitter.com/hashtag/html">#html</a>, <a href="http://rxrwng.appspot.com/twitter.com/hashtag/css">#css</a>, <a href="http://rxrwng.appspot.com/twitter.com/hashtag/js">#js</a></p>
         </div>
     </div>
 
@@ -64,12 +64,11 @@
         <div class="container">
             <h1 class="animated wow rollIn">15 years old</h1>
             <p>I am 15 years old, and a rising sophomore in high school</p>
-            <p>I like to consider myself smart for my age</p>
-        </div>
+            </div>
     </div>
 
     <div class="email">
-        <h1>"<a href="http://twitter.com/#yoloswag">#yoloswag</a>"</h1>
+        <h1>"<a href="http://rxrwng.appspot.com/twitter.com/hashtag/yoloswag">#yoloswag</a>"</h1>
         <div class="container">
         <form method="POST" action="http://forms.brace.io/andy@andykamath.com">
 
