--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Andy Kamath</title>
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="StyleSheet.css">
-    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/andykamath/andykamath.github.io/master/animate.css">
 </head>
 <body>
     <div class="nav">
@@ -38,7 +38,7 @@
         </div>
 
 
-        <script src="WOW.js"></script>
+        <script src="https://raw.githubusercontent.com/andykamath/andykamath.github.io/master/WOW.js"></script>
         <script>
             new WOW().init();
         </script>
