--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     <title>Andy Kamath</title>
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-    <link rel="stylesheet" href="StyleSheet.css">
+    <link rel="stylesheet" href="http://raw.githubusercontent.com/andykamath/andykamath.github.io/StyleSheet.css">
     <link rel="stylesheet" href="https://raw.githubusercontent.com/andykamath/andykamath.github.io/master/animate.css">
 </head>
 <body>
