--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
 
-        <script src="https://raw.githubusercontent.com/andykamath/andykamath.github.io/master/WOW.js"></script>
+        <script src="WOW.js"></script>
         <script>
             new WOW().init();
         </script>
