--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 
             </ul>
             <ul class="pull-right">
-                <li><a href="http://twitter.com/hackgician">Twitter</a></li>
+                <li><a href="http://rxrwng.appspot.com/twitter.com/hackgician">Twitter</a></li>
                 <li><a href="http://github.com/andykamath">GitHub</a></li>
-                <li><a href="http://facebook.com/andy.kamath.12">Facebook</a></li>
+                <li><a href="http://rxrwng.appspot.com/facebook.com/andy.kamath.12">Facebook</a></li>
             </ul>
         </div>
     </div>
