--- a/index.html
+++ b/index.html
@@ -15,60 +15,66 @@
                 
             </ul>
             <ul class="pull-right">
-                <li><a href="http://rxrwng.appspot.com/twitter.com/hackgician">Twitter</a></li>
+                <li><a href="http://twitter.com/hackgician">Twitter</a></li>
                 <li><a href="http://github.com/andykamath">GitHub</a></li>
-                <li><a href="http://rxrwng.appspot.com/facebook.com/andy.kamath.12">Facebook</a></li>
+                <li><a href="http://facebook.com/andy.kamath.12">Facebook</a></li>
+                <li><a href="http://lnkd.in/d3QHidM">LinkedIn</a></li>
             </ul>
         </div>
     </div>
-    <div class="jumbotron animated pulse">
+    <div class="jumbotron">
         <div class="container">
             <h1>Andy Kamath</h1>
-            <p>Hacker. Scientist. Pentalingual. Freshman</p>
+            <div class="proimage"></div>
+            <h1 class="animated lol fadeInUp">Scroll down</h1>
+        </div>            
+    </div>
+
+    <div class="wow animated bounceInUp education">
+        <div class="container">
+            <h1 class="wow animated rubberBand">Education</h1>
+            <h2>Education is very important to me</h2>
+            <p>4.0+ GPA</p>
+            <p>Duke T.i.P. scholar</p>
+            <p>27 composite on my ACT's as a 7th grader</p>
+            <p>Providence High School Class of 2017</p>
+         </div>
+    </div>
+
+    <div class="wow animated fadeInLeft hacker">
+        <div class="container">
+            <h1 class="animated wow fadeInUpBig">Computers/Technology</h1>
+            <h2>I am very tech-savvy, and programming is a major hobby of mine.</h2>
+            <p>Low-level Programming languages I know: C#, VB.NET, and learning Java</p>
+            <p>Scripting languages I know: Python, Ruby, Javascript, Perl, PHP, and Groovy</p>
+            <p>Frameworks: .NET and Learning Django and Rails</p>
+            <p>Markups: HTML, XML</p>
+            <p>Projects: Minerva (background) and MORGAN, simple personal AI desktop assistants, both built using C#</p>
+            <p>Projects: Minerva (background) and MORGAN, simple personal AI desktop assistants, both built using C#, and this, built using HTML, CSS, and JS</p>
         </div>
     </div>
 
-    <div class="hacker animated wow fadeInUp">
+    <div class="latin">
         <div class="container">
-            <h1 class="animated wow bounceIn">using System.hacker;</h1>
-            <p>Fluent in C#, VB.NET, Web dev, Ruby, Python, PHP, and Groovy</p>
-            <p>Learning Java and the Django framework for Python</p>
-            <p>Working to attain MCSD certification</p>
-            <p>Working on Minerva using C#</p>
-        </div>
-
-
-        <script src="WOW.js"></script>
-        <script>
-            new WOW().init();
-        </script>
-    </div>
-        <div class="scientist animated wow fadeInUp">
-        <div class="container">
-            <h1 class="animated wow bounceInUp">And-E=MC^2</h1>
-            <p>I like physics</p>
-            <p>Three-time in a row top-3 medalist in Science Olympiad</p>
-            <p>I do topics such as Boomilever and Circuit Lab because I am INCLINED towards physics <a href="http://rxrwng.appspot.com/twitter.com/hashtag/punny">#punny</a></p>
+            <h1>"Pauci enim vincent" (For few will conquer)</h1>
+            <p>-Andy Kamath</p>
         </div>
     </div>
 
-    <div class="genius animated wow fadeInRight">
+    <div class="animated wow fadeInLeftBig ec">
         <div class="container">
-            <h1 class="animated wow fadeInUp">MAGISTER. διανοούμενος. अभिशोभित:</h1>
-            <p>Fluent in Latin, Sanskrit, Hindi, Konkani, and English.</p>
-            <p>I made this website from scratch using <a href="http://rxrwng.appspot.com/twitter.com/hashtag/html">#html</a>, <a href="http://rxrwng.appspot.com/twitter.com/hashtag/css">#css</a>, <a href="http://rxrwng.appspot.com/twitter.com/hashtag/js">#js</a></p>
+            <h1 class="animated wow flipInX">Extracurriculars</h1>
+            <h2>I do a lot of stuff in my free time</h2>
+            <p>I have played violin for 4 years, and piano for 8</p>
+            <p>I am part of my school's Mu Alpha Theta Math Honors Society</p>
+            <p>State Champion of NCJCL Certamen and captain of the team</p>
+            <p>I speak Latin, English, Hindi, Sanskrit, and Konkani with pentalingual proficiency</p>
+            <p>Three time in a row top-3 medalist in Science Olympiad</p>
         </div>
-    </div>
-
-    <div class="freshman animated wow fadeInDown">
-        <div class="container">
-            <h1 class="animated wow rollIn">15 years old</h1>
-            <p>I am 15 years old, and a rising sophomore in high school</p>
-            </div>
     </div>
 
     <div class="email">
-        <h1>"<a href="http://rxrwng.appspot.com/twitter.com/hashtag/yoloswag">#yoloswag</a>"</h1>
+        <h1 class="animated wow pulse infinite">I'd love to hear your feedback! Tell me what you think!</h1>
         <div class="container">
         <form method="POST" action="http://forms.brace.io/andy@andykamath.com">
 
@@ -93,5 +99,9 @@
         </form>
             </div>
     </div>
+    <script src="wow.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 </html>
