--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>27 composite on my ACT's as a 7th grader</p>
             <p>Providence High School Class of 2017</p>
          </div>
-             <script src="wow.js"></script>
+             <script src="WOW.js"></script>
     <script>
         new WOW().init();
     </script>
