--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <h1>Andy Kamath</h1>
             <div class="proimage"></div>
-            <h1 class="animated lol fadeInUp">Scroll down</h1>
+            <h1 class="animated lol fadeInUpBig">Scroll down</h1>
         </div>            
     </div>
 
