--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </div>
 
-    <div class="animated wow fadeInLeftBig ec">
+    <div class="animated wow pulse ec">
         <div class="container">
             <h1 class="animated wow flipInX">Extracurriculars</h1>
             <h2>I do a lot of stuff in my free time</h2>
