--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
     <div class="wow animated fadeInLeft hacker">
         <div class="container">
             <h1 class="animated wow fadeInUpBig">Computers/Technology</h1>
-            <h2>I am very tech-savvy, and programming is a major hobby of mine.</h2>
-            <p>Low-level Programming languages I know: C#, VB.NET, and learning Java</p>
+            <p>Programming languages I know: C#, VB.NET, and learning Java</p>
             <p>Scripting languages I know: Python, Ruby, Javascript, Perl, PHP, and Groovy</p>
             <p>Frameworks: .NET and Learning Django and Rails</p>
             <p>Markups: HTML, XML</p>
