--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="StyleSheet.css">
     <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" type = "text/css" href = "http://fonts.googleapis.com/css?family=Tangerine">
 </head>
 <body>
     <div class="nav">
