--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="StyleSheet.css">
     <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" type = "text/css" href = "http://fonts.googleapis.com/css?family=Tangerine">
+    <link rel="stylesheet" href = "http://fonts.googleapis.com/css?family=Ubuntu"
 </head>
 <body>
     <div class="nav">
