--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </form>
             </div>
     </div>
-    <script src="wow.js"></script>
+    <script src="WOW.js"></script>
     <script>
         new WOW().init();
     </script>
