--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="container">
             <h1 class="animated wow pulse">Andy Kamath</h1>
             <div class="proimage"></div>
+            <h2>(Sorry for the ugliness)</h2>
             <h1 class="animated wow fadeInUp">Scroll down</h1>
             <div class="animated wow fadeInUp scroll"></div>
         </div>            
