--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="container">
             <h1 class="animated wow pulse">Andy Kamath</h1>
             <div class="proimage"></div>
+                <div class="swag" style="padding: 20px 20px;"
                 <div class="row">
         <a href="http://fb.com/hackgician">
             <div class="wow animated fadeInUp col-md-4">
@@ -45,7 +46,8 @@
             </div>
         </a>
 </div>
-        </div>            
+        </div>        
+        </div>
     </div>
 
     <div class="email">
