--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                 <div class="swag" style="padding: 20px 20px;"
                 <div class="row">
         <a href="http://fb.com/hackgician">
-            <div class="wow animated fadeInUp col-md-4">
+            <div class="wow animated fadeInLeftBig col-md-4">
                 <div class="facebook"></div>
             </div>
         </a>
         <a href="http://twitter.com/hackgician">
-            <div class="wow animated fadeInDownBig col-md-4">
+            <div class="wow animated fadeInUp col-md-4">
                 <div class="twitter"></div>
             </div>
         </a>
         <a href="http://lnkd.in/d3QHidM">
-            <div class="wow animated fadeInUp col-md-4">
+            <div class="wow animated fadeInRightBig col-md-4">
                 <div class="linkedin"></div>
             </div>
         </a>
