--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="swag" style="padding: 20px 20px;"
                 <div class="row">
         <a href="http://fb.com/hackgician">
-            <div class="wow animated fadeInRightBig col-md-4">
+            <div class="wow animated fadeInRight col-md-4">
                 <div class="facebook"></div>
             </div>
         </a>
@@ -41,7 +41,7 @@
             </div>
         </a>
         <a href="http://lnkd.in/d3QHidM">
-            <div class="wow animated fadeInLeftBig col-md-4">
+            <div class="wow animated fadeInLeft col-md-4">
                 <div class="linkedin"></div>
             </div>
         </a>
