--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
 
-    <div class="email">
+    <div class="email" style="padding: 10px 10px 10px 10px;>
         
         <h1 class="animated wow pulse">I'd love to hear your feedback!</h1>
         <div class="container">
