--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
         <div class="container">
         <form method="POST" action="http://forms.brace.io/andy@andykamath.com">
 
-            <div class="form-group animated wow fadeInLeftBig">
+            <div class="form-group animated wow fadeInLeft">
                 <label for="exampleInputName">Name</label>
                 <input name="name" class="form-control" id="exampleInputName" placeholder="Enter name">
             </div>
 
-            <div class="form-group animated wow fadeInRightBig">
+            <div class="form-group animated wow fadeInRight">
                 <label for="exampleInputEmail1">Email address</label>
                 <input name="_replyto" type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
             </div>
 
-            <div class="form-group animated wow fadeInUpBig">
+            <div class="form-group animated wow fadeInLeft">
                 <label for="exampleTextArea">Your comment</label>
                 <textarea name="message" class="form-control" rows="3"></textarea>
             </div>
