--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
             <ul class="pull-right">
                 <li><a href="http://github.com/andykamath">Github</a></li>
-                <li><a href="http://facebook.com/andy.kamath.12">Facebook</a></li>
+                <li><a href="http://facebook.com/hackgician">Facebook</a></li>
                 <li><a href="http://lnkd.in/d3QHidM">Linkedin</a></li>
                 <li><a href="http://opinion.andykamath.com">Blog</a></li>
                 <li><a href="http://twitter.com/hackgician">Twitter</a></li>
